fixed instock content align

--- a/client/src/components/CSS/productList.css
+++ b/client/src/components/CSS/productList.css
@@ -49,6 +49,7 @@
 .productActions {
   display: flex;
   flex-direction: column;
+  align-items: stretch;
   justify-content: space-between;
   align-items: center;
   margin-top: 4px;
